# geoapps-utils

./: .codespellignore  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README-dev.rst  README.rst  meta.yaml  package.rst  pixi.toml  py-3.10.conda-lock.yml  py-3.11.conda-lock.yml  py-3.12.conda-lock.yml  pylintrc  pyproject.toml  recipe.yaml
.github/workflows/: issue_to_jira.yml  python_analysis.yml  python_deploy_dev.yml  python_deploy_prod.yml  python_publish.yml
environments/: py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64.conda.lock.yml  py-3.11-linux-64-dev.conda.lock.yml  py-3.11-linux-64.conda.lock.yml  py-3.11-win-64-dev.conda.lock.yml  py-3.11-win-64.conda.lock.yml  py-3.12-linux-64-dev.conda.lock.yml  py-3.12-linux-64.conda.lock.yml  py-3.12-win-64-dev.conda.lock.yml  py-3.12-win-64.conda.lock.yml
geoapps_utils/: __init__.py  base.py  data.py  driver.py  locations.py  numerical.py  run.py
geoapps_utils/application/: layout.py
geoapps_utils/driver/: __init__.py  data.py  driver.py  params.py  uijson.py
geoapps_utils/modelling/: __init__.py  plate_in_a_halfspace.py  plates.py
geoapps_utils/modelling/surveys/: dcip.py
geoapps_utils/modelling/surveys/frequency_domain/: __init__.py  fdem.py
geoapps_utils/modelling/surveys/time_domain/: __init__.py  airborne_tdem.py  ground_tdem.py
geoapps_utils/param_sweeps/: __init__.py  driver.py  generate.py
geoapps_utils/utils/: __init__.py  conversions.py  formatters.py  importing.py  iterables.py  locations.py  logger.py  numerical.py  plotting.py  reference.py  transformations.py  workspace.py
tests/: conversions_test.py  dataclass_test.py  driver_test.py  dummy_driver_test.py  formatters_test.py  importing_test.py  iterables_test.py  locations_test.py  logger_test.py  numerical_test.py  plates_test.py  plotting_test.py  reference_test.py  transformations_test.py  uijson_run_test.py  version_test.py
tests/param_sweeps/: driver_test.py  generate_test.py
